install/ gem font awesome

--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -4,14 +4,9 @@
   position: fixed;
     top:0;
   font-size: 30px;
+  padding: 0 30px;
   background:rgba(0,0,0,0);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  .myName{
-    padding-left: 30px;
-  }
-  .menuIcon{
-    padding-right: 30px;
-  }
 }
