--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,8 @@
--# .topDisplay
--#   .topContent
--#     I'AM 
--#     %br
--#     KANATA
--#     %br
--#     OKAYAMA
+.topDisplay
+  .topDisplay--opasity
+    .topContent
+      I'AM 
+      %br
+      KANATA
+      %br
+      OKAYAMA
