create/js toppage

--- a/app/views/home/top.html.haml
+++ b/app/views/home/top.html.haml
@@ -1,8 +1,17 @@
 .topDisplay
   .topDisplay--opasity
-    .topContent
-      I'AM 
-      %br
-      KANATA
-      %br
-      OKAYAMA
+    .wellcomeBox
+      .wellcomeBox__message
+        こんにちは。
+        %br
+        ポートフォリオです。
+        %br
+        ありがとうございます。
+      .wellcomeBox__linkBtn
+        =link_to "Wellcome!!","#",class:"wellcomeBtn"
+      .topContent
+        I'AM 
+        %br
+        KANATA
+        %br
+        OKAYAMA
