--- a/app/assets/stylesheets/modules/_top.scss
+++ b/app/assets/stylesheets/modules/_top.scss
@@ -8,17 +8,56 @@
     background:rgba(255,255,255,0.6);
     height: 100%;
     position: relative;
+    display: flex;
   }
 }
 
-.topContent{
-  font-size: 100px;
-  font-weight: 50px;
-  padding-left: 35%;
+.wellcomeBox{
+  width: 500px;
+  height: 500px;
+  border-radius: 100%;
   position: absolute;
     top: 50%;
+    left:35%;
   transform: translateY(-50%);
+  &__message{
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 30px;
+    text-align: center;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    color: rgba(0,0,0,0,);
+  }
+  &__linkBtn{
+    z-index: 1;
+    position: absolute;
+    height: 25px;
+    width: 200px;
+    text-align: center;
+    line-height: 25px;
+    border-radius: 30px;
+    bottom: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    .wellcomeBtn{
+      text-decoration: none;
+      font-weight: bold;
+      color: rgba(0,0,0,0,);
+    }
+  }
 }
+.topContent{
+  z-index: 0;
+  font-size: 100px;
+  font-weight: 50px;
+  position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
 
 // .footer{
 //   display: none;
