--- a/app/views/home/top.html.haml
+++ b/app/views/home/top.html.haml
@@ -2,13 +2,13 @@
   .topDisplay--opasity
     .wellcomeBox
       .wellcomeBox__message
-        こんにちは。
+        wellcome
         %br
-        ポートフォリオです。
+        My portofolio!!
         %br
-        ありがとうございます。
+        thank you!
       .wellcomeBox__linkBtn
-        =link_to "Wellcome!!","#",class:"wellcomeBtn"
+        =link_to "Push!!","#",class:"wellcomeBtn"
       .topContent
         I'AM 
         %br
