--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,7 @@
 .header
-  .myName
-    Kanata Okayama
+  =link_to "Kanata Okayama","#",class:"myName"
   = icon('fa', 'bars',class:"menuIcon")
+
+.menuModal
+  = icon('fa', 'close',class:"closeIcon")
+
