--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -1,5 +1,5 @@
 .header{
-  z-index: 1;
+  z-index: 100;
   height: 80px;
   width: 100%;
   position: fixed;
@@ -10,4 +10,29 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  .myName{
+    color: black;
+    text-decoration: none;
+  }
 }
+
+.menuModal{
+  z-index: 100;
+  border-radius: 50px;
+  position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%)translateX(-50%);
+  background-color:gray;
+  height: 70vh;
+  width: 70vh;
+  display: none;
+  .closeIcon{
+    position: absolute;
+      top: 3%;
+      left: 90%;
+    color: white;
+    font-size:2.5em;
+  }
+}
+
