--- a/app/views/contents/top.html.haml
+++ b/app/views/contents/top.html.haml
@@ -8,10 +8,10 @@
         %br
         thank you!
       .wellcomeBox__linkBtn
-        =link_to "Push!!","#",class:"wellcomeBtn"
-      .topContent
-        I'AM 
-        %br
-        KANATA
-        %br
-        OKAYAMA
+        =link_to "Push!!",contents_path, class:"wellcomeBtn"
+    .topContent
+      I'AM 
+      %br
+      KANATA
+      %br
+      OKAYAMA
