--- a/app/assets/stylesheets/modules/_top.scss
+++ b/app/assets/stylesheets/modules/_top.scss
@@ -16,20 +16,23 @@
   width: 500px;
   height: 500px;
   border-radius: 100%;
+  background-color: rgba(0,0,0,0.1);
+  display: none;
   position: absolute;
     top: 50%;
     left:35%;
   transform: translateY(-50%);
   &__message{
+    z-index: 1;
     font-size: 18px;
     font-weight: bold;
+    color: white;
     line-height: 30px;
     text-align: center;
     position: absolute;
-    top: 30%;
-    left: 50%;
+      top: 30%;
+      left: 50%;
     transform: translateX(-50%);
-    color: rgba(0,0,0,0,);
   }
   &__linkBtn{
     z-index: 1;
@@ -42,10 +45,11 @@
     bottom: 30%;
     left: 50%;
     transform: translateX(-50%);
+    background-color: black;
     .wellcomeBtn{
       text-decoration: none;
       font-weight: bold;
-      color: rgba(0,0,0,0,);
+      color: white;
     }
   }
 }
@@ -55,10 +59,6 @@
   font-weight: 50px;
   position: absolute;
     top: 50%;
-    transform: translateY(-50%);
-}
-
-
-.footer{
-  display: none;
+    left: 50%;
+    transform: translateY(-50%)translateX(-50%);
 }
