--- a/app/assets/stylesheets/modules/_top.scss
+++ b/app/assets/stylesheets/modules/_top.scss
@@ -13,15 +13,15 @@
 }
 
 .wellcomeBox{
-  width: 500px;
-  height: 500px;
+  width: 550px;
+  height: 550px;
   border-radius: 100%;
   background-color: rgba(0,0,0,0.1);
   display: none;
   position: absolute;
     top: 50%;
-    left:35%;
-  transform: translateY(-50%);
+    left:50%;
+  transform: translateY(-50%)translateX(-50%);
   &__message{
     z-index: 1;
     font-size: 18px;
