--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -30,7 +30,12 @@ footer, header, hgroup, menu, nav, section {
 }
 
 html {
+	font-family: 'Sen', sans-serif;
   font-size: 62.5%;
+}
+a{
+	font-family: 'Sen', sans-serif;
+	text-decoration: none;
 }
 
 body {
