--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,6 +2,7 @@
   =link_to "Kanata Okayama","#",class:"myName"
   = icon('fa', 'bars',class:"menuIcon")
 
-.menuModal
-  = icon('fa', 'close',class:"closeIcon")
+.menuModalWrapper
+  .menuModal
+    = icon('fa', 'close',class:"closeIcon")
 
