--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -1,12 +1,12 @@
 .header{
-  z-index: 100;
+  z-index: 95;
   height: 80px;
   width: 100%;
   position: fixed;
     top:0;
   font-size: 20px;
   padding: 0 30px;
-  background:rgba(0,0,0,0);
+  background-color:rgba(0,0,0,0);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -16,23 +16,31 @@
   }
 }
 
-.menuModal{
-  z-index: 100;
-  border-radius: 50px;
+.menuModalWrapper{
+  background-color: rgba(136, 136, 136, 0.8);
   position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translateY(-50%)translateX(-50%);
-  background-color:gray;
-  height: 70vh;
-  width: 70vh;
+    top: 0;
   display: none;
-  .closeIcon{
-    position: absolute;
-      top: 3%;
-      left: 90%;
-    color: white;
-    font-size:2.5em;
+  z-index: 100;
+  height:100vh;
+  width:100vw;
+  .menuModal{
+    z-index: 100;
+    border-radius: 50px;
+    position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translateY(-50%)translateX(-50%);
+    background-color:black;
+    height: 70vh;
+    width: 70vh;
+    display: none;
+    .closeIcon{
+      position: absolute;
+        top: 3%;
+        left: 90%;
+      color: white;
+      font-size:2.5em;
+    }
   }
 }
-
