--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -6,17 +6,11 @@
         =link_to "ShopSite","#",class:"products__shopSite--shopLink"
       %li.products__application
         =link_to "Application","#",class:"products__application--applicationLink"
-    %ul.skills
-      Skills
-      %li.skills__resume
-        =link_to "Resume","#",class:"skills__resume--resumeLink"
-      %li.skills__programming
-        =link_to "Programming","#",class:"skills__programming--programmingLink"
     %ul.about
-      About
+      About 
       %li.about__profile
         =link_to "Profile","#",class:"about__profile--profileLink"
-      %li.about__other
-        =link_to "Other","#",class:"skills__other--otherLink"
+      %li.about__skill
+        =link_to "Skill","#",class:"about__skill--skillLink"
   .footer__myName
     Kanata Okayama
