--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -10,9 +10,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  .myName{
+  .myName,.menuIcon{
     color: black;
-    text-decoration: none;
+    &:hover{
+      color: gray;
+    }
   }
 }
 
@@ -37,10 +39,13 @@
     display: none;
     .closeIcon{
       position: absolute;
-        top: 3%;
+        top: 5%;
         left: 90%;
       color: white;
-      font-size:2.5em;
+      font-size:2.0em;
+      &:hover{
+        color:gray;
+      }
     }
   }
 }
