--- a/app/views/contents/top.html.haml
+++ b/app/views/contents/top.html.haml
@@ -6,9 +6,11 @@
         %br
         My portofolio!!
         %br
-        thank you!
-      .wellcomeBox__linkBtn
-        =link_to "Push!!",contents_path, class:"wellcomeBtn"
+        %br
+        %br
+        push the button
+      = link_to(contents_path, class:"wellcomeBox__linkBtn") do
+        %p push!!
     .topContent
       I'AM 
       %br
