--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -10,7 +10,7 @@
       About 
       %li.about__profile
         =link_to "Profile","#",class:"about__profile--profileLink"
-      %li.about__skill
-        =link_to "Skill","#",class:"about__skill--skillLink"
+      %li.about__resume
+        =link_to "Resume","#",class:"about__skill--resumeLink"
   .footer__myName
     Kanata Okayama
