--- a/app/views/contents/top.html.haml
+++ b/app/views/contents/top.html.haml
@@ -12,8 +12,6 @@
       = link_to(contents_path, class:"wellcomeBox__linkBtn") do
         %p push!!
     .topContent
-      I'AM 
-      %br
-      KANATA
-      %br
-      OKAYAMA
+      KANATA OKAYAMA
+      .lowContent
+        engineer
