--- a/app/assets/stylesheets/modules/_top.scss
+++ b/app/assets/stylesheets/modules/_top.scss
@@ -5,7 +5,7 @@
   background-size: cover;
   height: 100vh;
   &--opasity{
-    background:rgba(255,255,255,0.6);
+    background:rgba(255,255,255,0.8);
     height: 100%;
     position: relative;
     display: flex;
@@ -16,7 +16,7 @@
   width: 550px;
   height: 550px;
   border-radius: 100%;
-  background-color: rgba(0,0,0,0.05);
+  background-color: rgba(0,0,0,0.03);
   display: none;
   position: absolute;
     top: 50%;
@@ -55,10 +55,15 @@
 }
 .topContent{
   z-index: 0;
-  font-size: 100px;
-  font-weight: 60px;
+  font-size: 30px;
+  font-weight: 50px;
   position: absolute;
     top: 50%;
     left: 50%;
     transform: translateY(-50%)translateX(-50%);
+  .lowContent{
+    color: gray;
+    font-size: 20px;
+    text-align: center;
+  }
 }
