--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,16 +1,16 @@
 .footer
   .linkList
-    %ul.products
-      Products
-      %li.products__shopSite
-        =link_to "ShopSite","#",class:"products__shopSite--shopLink"
-      %li.products__application
-        =link_to "Application","#",class:"products__application--applicationLink"
+    %ul.works
+      Works
+      %li.works__shopSite
+        =link_to "ShopSite","#",class:"works__shopSite--shopLink"
+      %li.works__application
+        =link_to "Application","#",class:"works__application--applicationLink"
     %ul.about
       About 
       %li.about__profile
         =link_to "Profile","#",class:"about__profile--profileLink"
       %li.about__resume
-        =link_to "Resume","#",class:"about__skill--resumeLink"
+        =link_to "Resume","#",class:"about__resume--resumeLink"
   .footer__myName
     Kanata Okayama
