--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,13 +11,13 @@
         login
         =icon('fa','caret-down')
       %dd.menu__login__form
-      %dt.menu__products
-        Products
+      %dt.menu__works
+        Works
         =icon('fa','caret-down')
-      %dd.menu__productsLinks
-        %li.menu__productsLinks--shopSite.tab
+      %dd.menu__worksLinks
+        %li.menu__worksLinks--shopSite.tab
           = link_to('ShopSite','#')
-        %li.menu__productsLinks--Application.tab
+        %li.menu__worksLinks--Application.tab
           = link_to('Application','#')
       %dt.menu__about
         About
