--- a/app/assets/stylesheets/modules/_footer.scss
+++ b/app/assets/stylesheets/modules/_footer.scss
@@ -16,6 +16,9 @@
 
 ul{
   font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   a{
     font-size: 15px;
     text-decoration: none;
