view/separate 3section

--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -1,7 +1,13 @@
 .indexPage
   .topPhoto
-    .topMessage
-  .hedding
-    Works
-  .hedding
-    About
+    .topPhoto__topMessage
+  .about
+    .about__profile
+      Profile
+    .about__skills
+      Skills
+  .works
+    .works__applications
+      Applications
+    .works__websites
+      Websites
