--- a/app/assets/stylesheets/modules/_index.scss
+++ b/app/assets/stylesheets/modules/_index.scss
@@ -1,18 +1,27 @@
 .indexPage{
   width: 100vw;
-}
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+// topPhoto================================================
 .topPhoto{
-  background-color:white;
   width: 100vw;
   height: 100vh;
+  background-color: rgb(177, 175, 175);
+  &__topMessage{
+    color: black;
+  }
 }
-
-.hedding{
-  margin-left: 50%;
-    transform: translateX(-50%);
-  width: 300px;
-  text-align: center;
-  font-size: 50px;
-  border-bottom: solid 2px black;
+// about================================================
+.about{
+  background-color: rgb(187, 139, 139);
+  width: 80vw;
+  height: 100vh;
+}
+// works================================================
+.works{
+  background-color: rgb(139, 146, 187);
+  width: 80vw;
+  height: 100vh;
+}
 }
