--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -3,9 +3,13 @@
     .topPhoto__topMessage
   .about
     .about__profile
-      Profile
+      .about__profile--headding
+        Profile
+      #line
     .about__skills
-      Skills
+      .about__skills--headding
+        Skills
+      #line
   .works
     .works__applications
       Applications
