--- a/app/assets/stylesheets/modules/_index.scss
+++ b/app/assets/stylesheets/modules/_index.scss
@@ -17,11 +17,39 @@
   background-color: rgb(187, 139, 139);
   width: 80vw;
   height: 100vh;
+  font-size: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  &__profile{
+    background-color: rgb(134, 69, 69);
+    width: 100%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__skills{
+    background-color: rgb(122, 27, 27);
+    width: 100%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 // works================================================
 .works{
   background-color: rgb(139, 146, 187);
   width: 80vw;
   height: 100vh;
+}
+
+// other================================================
+#line{
+  background-color: #fff;
+  height: 3px;
+  width: 100px;
+  margin-top: 2px;
 }
 }
