--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,12 @@
 @import "reset";
+// ================================================
+@import "config/colors";
+@import "config/mixin";
+// ================================================
 @import "modules/header";
 @import "modules/footer";
 @import "modules/top";
 @import "modules/index";
+// ================================================
 @import "font-awesome-sprockets";
 @import "font-awesome";
