--- a/app/assets/stylesheets/config/_mixin.scss
+++ b/app/assets/stylesheets/config/_mixin.scss
@@ -3,3 +3,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+@mixin position_center{
+  position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%)translateY(-50%);
+}
