--- a/app/assets/stylesheets/modules/_index.scss
+++ b/app/assets/stylesheets/modules/_index.scss
@@ -1,8 +1,6 @@
 .indexPage{
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flex_direction_center;
 // topPhoto================================================
 .topPhoto{
   width: 100vw;
@@ -14,22 +12,80 @@
 }
 // about================================================
 .about{
-  background-color: rgb(187, 139, 139);
   width: 80vw;
   height: 100vh;
-  font-size: 60px;
   @include flex_direction_center;
   &__profile{
     background-color: rgb(134, 69, 69);
     width: 100%;
     height: 70%;
     @include flex_direction_center;
-  }
+    &--headding{
+      font-size: 60px;
+    }
+    &--textUpper{
+      background-color: rgb(110, 94, 41);
+      width: 80%;
+      height: 25%;
+      font-size: 30px;
+    }
+    &--textMiddle{
+      background-color: rgb(121, 111, 78);
+      width: 80%;
+      height: 25%;
+      font-size: 30px;
+    }
+    &--textLower{
+      background-color: rgb(56, 45, 6);
+      width: 80%;
+      height: 25%;
+      font-size: 30px;
+    }
+      &__linkBox{
+        width: 15%;
+        height: 6%;
+        margin: 15px 0 0 auto;
+        display: flex;
+        align-items: center;
+        &--text{
+          width: 80%;
+          height: 100%;
+          font-size:30px;
+          background-color: yellow;
+        }
+        &--icon{
+          width: 20%;
+          height: 100%;
+          background-color: red;
+        }
+      }
+    }
   &__skills{
     background-color: rgb(122, 27, 27);
     width: 100%;
     height: 30%;
     @include flex_direction_center;
+    &--headding{
+      font-size: 60px;
+    }
+    &__boxes,ul{
+      width: 80%;
+      height: 60%;
+      margin-top: 15px;
+      background-color: rgb(182, 165, 243);
+      display: flex;
+      justify-content: space-between;
+      &__box,li{
+        height: 100%;
+        width: 15%;
+        border-radius: 5%;
+        background-color: #fff;
+        position: relative;
+        &--icon{
+          @include position_center;
+        }
+      }
+    }
   }
 }
 // works================================================
