--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -1,7 +1,10 @@
 .indexPage
+  -# top================================================
   .topPhoto
     .topPhoto__topMessage
+  -# about================================================
   .about
+    -# profile------------------------------------------------
     .about__profile
       .about__profile--headding
         Profile
@@ -13,6 +16,7 @@
         .about__profile__linkBox--text
           more...
         .about__profile__linkBox--icon
+    -# skills------------------------------------------------
     .about__skills
       .about__skills--headding
         Skills
@@ -36,11 +40,13 @@
         %li.about__skills__boxes__box
           .about__skills__boxes__box--icon
             SQL
-
+  -# works================================================
   .works
+    -# applications------------------------------------------------
     .works__applications
       .works__applications--headding
         Applications
+    -# websites------------------------------------------------
     .works__websites
       .works__websites--headding
         Websites
