--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -9,9 +9,10 @@
       .about__profile--headding
         Profile
       #line
-      .about__profile--textUpper
-      .about__profile--textMiddle
-      .about__profile--textLower
+      .about__profile__textBox
+        .about__profile__textBox--textUpper
+        .about__profile__textBox--textMiddle
+        .about__profile__textBox--textLower
       = link_to("#",class:"about__profile__linkBox") do 
         .about__profile__linkBox--text
           more...
