--- a/app/assets/stylesheets/modules/_index.scss
+++ b/app/assets/stylesheets/modules/_index.scss
@@ -14,52 +14,58 @@
 .about{
   width: 80vw;
   height: 100vh;
-  @include flex_direction_center;
+    // profile------------------------------------------------
   &__profile{
     background-color: rgb(134, 69, 69);
     width: 100%;
     height: 70%;
-    @include flex_direction_center;
     &--headding{
-      font-size: 60px;
+      font-size: 20px;
     }
-    &--textUpper{
-      background-color: rgb(110, 94, 41);
-      width: 80%;
-      height: 25%;
-      font-size: 30px;
-    }
-    &--textMiddle{
-      background-color: rgb(121, 111, 78);
-      width: 80%;
-      height: 25%;
-      font-size: 30px;
-    }
-    &--textLower{
-      background-color: rgb(56, 45, 6);
-      width: 80%;
-      height: 25%;
-      font-size: 30px;
-    }
-      &__linkBox{
-        width: 15%;
-        height: 6%;
-        margin: 15px 0 0 auto;
-        display: flex;
-        align-items: center;
-        &--text{
-          width: 80%;
-          height: 100%;
-          font-size:30px;
-          background-color: yellow;
-        }
-        &--icon{
-          width: 20%;
-          height: 100%;
-          background-color: red;
-        }
+    &__textBox{
+      margin-left: 20px;
+      width: 100%;
+      height: 70%;
+      &--textUpper{
+        background-color: rgb(110, 94, 41);
+        width: 80%;
+        height: 33%;
+        font-size: 30px;
+      }
+      &--textMiddle{
+        background-color: rgb(121, 111, 78);
+        width: 80%;
+        height: 33%;
+        font-size: 30px;
+      }
+      &--textLower{
+        background-color: rgb(56, 45, 6);
+        width: 80%;
+        height: 33%;
+        font-size: 30px;
       }
     }
+    &__linkBox{
+      background-color: blue;
+      width: 15%;
+      height: 6%;
+      margin: 15px 0 0 auto;
+      display: flex;
+      align-items: center;
+      &--text{
+        width: 80%;
+        height: 100%;
+        font-size:30px;
+        background-color: yellow;
+      }
+      &--icon{
+        width: 20%;
+        height: 100%;
+        background-color: red;
+      }
+    }
+  }
+  // skills------------------------------------------------
   &__skills{
     background-color: rgb(122, 27, 27);
     width: 100%;
@@ -92,14 +98,25 @@
 .works{
   background-color: rgb(139, 146, 187);
   width: 80vw;
-  height: 100vh;
+  
+  // applications------------------------------------------------
+  &__applications{
+    background-color: green;
+    width: 100%;
+    height: 100vh;
+  }
+  // websites------------------------------------------------
+  &__websites{
+    background-color: limegreen;
+    width: 100%;
+    height: 100vh;
+  }
 }
 
 // other================================================
 #line{
-  background-color: #fff;
-  height: 3px;
-  width: 100px;
-  margin-top: 2px;
+  background-color: black;
+  height: 1px;
+  width: 300px;
 }
 }
