--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -1,35 +1,37 @@
-#index
-  -# top================================================
-  .top
-    .top__nameBox
-      .top__nameBox--engineer
-        engineer
-      .top__nameBox--myName
-        オカヤマ カナタ
-  -# profile================================================
-  .profile
-    .profile__hedding
-      .profile__hedding--left
-        Profile
-      .profile__hedding--right
-        and more
-    .profile__main
-      .profile__main__Box
-        .profile__main__Box--hedding
+#scroll
+  #index
+    -# top================================================
+    .top
+      .top__nameBox
+        .top__nameBox--engineer
+          engineer
+        .top__nameBox--myName
           オカヤマ カナタ
-        .profile__main__Box--birthDay
-          1992年6月9日生まれ、B型、双子座。
-      .profile__main__Box
-        .profile__main__Box--hedding
-          出身
-        .profile__main__Box--from
-          大阪府大阪市西成区
-      .profile__main__Box
-        .profile__main__Box--hedding
-          略歴
-        .profile__main__Box--Content1
-          2018年　同志社大学心理学部心理学科　卒業。
-        .profile__main__Box--Content2
-          2018年　日本郵便株式会社　入社。
-        .profile__main__Box--Content3
-          2020年　エンジニアを目指し学習開始。
+    -# profile================================================
+    .profile
+      .profile__hedding
+        .profile__hedding--left
+          Profile
+        .profile__hedding--right
+          and more
+      .profile__main
+        .profile__main__Box
+          .profile__main__Box--hedding
+            オカヤマ カナタ
+          .profile__main__Box--birthDay
+            1992年6月9日生まれ、B型、双子座。
+        .profile__main__Box
+          .profile__main__Box--hedding
+            出身
+          .profile__main__Box--from
+            大阪府大阪市西成区
+        .profile__main__Box
+          .profile__main__Box--hedding
+            略歴
+          .profile__main__Box--Content1
+            2018年　同志社大学心理学部心理学科 卒業。
+          .profile__main__Box--Content2
+            2018年　日本郵便株式会社 入社。
+          .profile__main__Box--Content3
+            2020年　エンジニアを目指し学習開始。
+            
