--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "reset";
 @import "config/mixin";
 @import "config/colors";
+@import "config/scroll";
 // ================================================
 @import "modules/index";
 // ================================================
