--- a/app/assets/stylesheets/modules/_index.scss
+++ b/app/assets/stylesheets/modules/_index.scss
@@ -1,8 +1,9 @@
 #index{
-  width: 70vw;
+  width: 80vw;
   margin: 0 auto;
 // top-contents================================================
 .top{
+  scroll-snap-align: start;
   width: 100%;
   height: 100vh;
   position: relative;
@@ -19,8 +20,10 @@
 }
 // profile================================================
 .profile{
+  scroll-snap-align: start;
+  padding-top: 8vh;
   width: 100%;
-  // background-color: red;
+  background-color: red;
   // hedding------------------------------------------------
   &__hedding{
     // background-color: pink;
@@ -39,9 +42,8 @@
   // main------------------------------------------------
   &__main{
     margin:0 auto;
-    // background-color:yellow;
+    background-color:yellow;
     width:80%;
-    height:100vh;
     line-height: 4vh;
     font-size: 2vh;
     &__Box{
