--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -15,23 +15,68 @@
         .profile__hedding--right
           and more
       .profile__main
-        .profile__main__Box
-          .profile__main__Box--hedding
+        .profile__main__box
+          .profile__main__box--hedding
             オカヤマ カナタ
-          .profile__main__Box--birthDay
+          .profile__main__box--birthDay
             1992年6月9日生まれ、B型、双子座。
-        .profile__main__Box
-          .profile__main__Box--hedding
+        .profile__main__box
+          .profile__main__box--hedding
             出身
-          .profile__main__Box--from
+          .profile__main__box--from
             大阪府大阪市西成区
-        .profile__main__Box
-          .profile__main__Box--hedding
+        .profile__main__box
+          .profile__main__box--hedding
             略歴
-          .profile__main__Box--Content1
+          .profile__main__box--Content1
             2018年　同志社大学心理学部心理学科 卒業。
-          .profile__main__Box--Content2
+          .profile__main__box--Content2
             2018年　日本郵便株式会社 入社。
-          .profile__main__Box--Content3
+          .profile__main__box--Content3
             2020年　エンジニアを目指し学習開始。
-            
+        .profile__main__box
+          .profile__main__box--hedding
+            趣味
+          .profile__main__box--hoby1
+            コーヒー　抽出だけでなく、焙煎やラテアートも。
+          .profile__main__box--hoby2
+            カメラ　最近始めたばかり。現像作業の勉強を開始。
+    -# skills================================================
+    .skills
+      .skills__hedding
+        Skills
+      .skills__box
+        .skills__box__content1
+          .skills__box__content--name
+            HTML5
+          .skills__box__content--text
+            エイチティーエムエル
+        .skills__box__content
+          .skills__box__content--name
+            CSS
+          .skills__box__content--text
+            シーエスエス
+        .skills__box__content
+          .skills__box__content--name
+            javascript
+          .skills__box__content--text
+            ジャバスク
+        .skills__box__content
+          .skills__box__content--name
+            ruby
+          .skills__box__content--text
+            ルビー
+        .skills__box__content
+          .skills__box__content--name
+            Other
+          .skills__box__content--text
+            その他
+        .skills__box__content
+          .skills__box__content--name
+            Studying
+          .skills__box__content--text
+            勉強中
+    -# works================================================
+    .works
+      .works__hedding
+        works
