--- a/app/assets/stylesheets/modules/_index.scss
+++ b/app/assets/stylesheets/modules/_index.scss
@@ -23,7 +23,7 @@
   scroll-snap-align: start;
   padding-top: 8vh;
   width: 100%;
-  background-color: red;
+  // background-color: red;
   // hedding------------------------------------------------
   &__hedding{
     // background-color: pink;
@@ -42,17 +42,65 @@
   // main------------------------------------------------
   &__main{
     margin:0 auto;
-    background-color:yellow;
+    // background-color:yellow;
     width:80%;
     line-height: 4vh;
     font-size: 2vh;
-    &__Box{
+    &__box{
       // background-color: blue;
       margin-bottom: 2vh;
       &--hedding{
         font-weight: bold;
       }
     }
+  }
+}
+// slills================================================
+.skills{
+  scroll-snap-align: start;
+  width: 100%;
+  // background-color:rgb(214, 190, 138);
+  display: flex;
+  &__hedding{
+    // background-color: blue;
+    padding-top: 8vh;
+    width: 10%;
+    font-size: 3vh;
+  }
+  &__box{
+    margin: 5% 0 0 0;
+    width: 70%;
+    // background-color: rgb(104, 81, 46);
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    &__content{
+      background-color: gray;
+      color: white;
+      border-radius: 10px;
+      margin: 40px 40px 40px 30px;
+      width: 20vh;
+      height: 20vh;
+    }
+    &__content1{
+      background-color: gray;
+      margin: 20px 0 0 0;
+      width: 30vh;
+      height: 30vh;
+    }
+  }
+}
+
+// works================================================
+.works{
+  scroll-snap-align: start;
+  padding-top: 8vh;
+  width: 100%;
+  height: 100vh;
+  background-color:rgb(138, 214, 157);
+  &__hedding{
+    width: 100%;
+    font-size: 3vh;
   }
 }
 // ================================================
