--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -46,7 +46,7 @@
       .skills__hedding
         Skills
       .skills__box
-        .skills__box__content1
+        .skills__box__content
           .skills__box__content--name
             HTML5
           .skills__box__content--text
