--- a/app/assets/stylesheets/modules/_index.scss
+++ b/app/assets/stylesheets/modules/_index.scss
@@ -53,25 +53,44 @@
 }
 // slills================================================
 .skills{
+  padding-top: 8vh;
   scroll-snap-align: start;
+  // background-color: red;
   width: 100%;
-  display: flex;
   &__hedding{
-    padding-top: 8vh;
-    width: 10%;
+    // background-color: blue;
+    width: 100%;
+    height: 6vh;
     font-size: 3vh;
+    line-height: 6vh;
+  }
+  &__topText{
+    width: 80%;
+    margin: 0 auto;
+    // background-color: pink;
+    margin-bottom: 2vh;
+    line-height: 4vh;
+    font-size: 2vh;
   }
   &__box{
-    margin: 5% 0 0 0;
-    width: 70%;
+    // background-color: green;
+    margin: 5vh auto 0;
+    width: 80%;
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
     &__content{
       background-color: gray;
       color: white;
       border-radius: 10px;
-      margin: 40px 40px 40px 30px;
+      width: 15vh;
+      height: 15vh;
+      margin-bottom: 5vh;
+    }
+    &__content1{
+      background-color: gray;
+      color: white;
+      border-radius: 10px;
       width: 20vh;
       height: 20vh;
     }
