--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -45,6 +45,12 @@
     .skills
       .skills__hedding
         Skills
+      .skills__topText
+        2020年。エンジニアへの転職を決意し、
+      .skills__topText
+        プログラミング学習に取り組んできました。
+      .skills__topText
+        未経験ではありますが、現時点での "オカヤマ カナタ" のスキルです。
       .skills__box
         .skills__box__content
           .skills__box__content--name
@@ -56,7 +62,7 @@
             CSS
           .skills__box__content--text
             シーエスエス
-        .skills__box__content
+        .skills__box__content1
           .skills__box__content--name
             javascript
           .skills__box__content--text
@@ -71,11 +77,6 @@
             Other
           .skills__box__content--text
             その他
-        .skills__box__content
-          .skills__box__content--name
-            Studying
-          .skills__box__content--text
-            勉強中
     -# works================================================
     .works
       .works__hedding
