--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -56,27 +56,27 @@
           .skills__box__content--name
             HTML5
           .skills__box__content--text
-            エイチティーエムエル
+            
         .skills__box__content
           .skills__box__content--name
             CSS
           .skills__box__content--text
-            シーエスエス
-        .skills__box__content1
+            
+        .skills__box__content
           .skills__box__content--name
             javascript
           .skills__box__content--text
-            ジャバスク
+            
         .skills__box__content
           .skills__box__content--name
             ruby
           .skills__box__content--text
-            ルビー
+
         .skills__box__content
           .skills__box__content--name
             Other
           .skills__box__content--text
-            その他
+            
     -# works================================================
     .works
       .works__hedding
