--- a/app/assets/stylesheets/modules/_index.scss
+++ b/app/assets/stylesheets/modules/_index.scss
@@ -73,7 +73,7 @@
     font-size: 2vh;
   }
   &__box{
-    // background-color: green;
+    background-color: green;
     margin: 5vh auto 0;
     width: 80%;
     display: flex;
@@ -85,14 +85,19 @@
       border-radius: 10px;
       width: 15vh;
       height: 15vh;
-      margin-bottom: 5vh;
+      margin: 5vh 0;
+      display: flex;
+      align-items: center;
+      &--name{
+        margin: 0 auto;
+      }
     }
     &__content1{
       background-color: gray;
       color: white;
       border-radius: 10px;
-      width: 20vh;
-      height: 20vh;
+      width: 25vh;
+      height: 25vh;
     }
   }
 }
