create/view_files

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,7 +4,8 @@
 @import "config/colors";
 @import "config/scroll";
 // ================================================
-@import "modules/index";
+@import "modules/contents/index";
+@import "modules/profiles/index";
 // ================================================
 @import "font-awesome-sprockets";
 @import "font-awesome";
