--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "config/mixin";
 @import "config/colors";
 @import "config/scroll";
+@import "config/fonts";
 // ================================================
 @import "modules/contents/index";
 @import "modules/profiles/index";
@@ -10,7 +11,4 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
-@font-face {
-  font-family: 'hare';
-  src: asset_url('Harenosora.otf') format('opentype');
-}
+
