--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -12,7 +12,7 @@
       .profile__hedding
         .profile__hedding--left
           Profile
-        =link_to("and more",profiles_path, class:"profile__hedding--right")
+        =link_to("more...",profiles_path, class:"profile__hedding--right")
       .profile__main
         .profile__main__box
           .profile__main__box--hedding
