--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,5 +1,7 @@
 $black:rgb(50,50,50);
-$gray:rgb(122, 122, 122);
-$blue:rgba(196, 242, 252, 0.938);
+$gray:rgb(175, 174, 174);
+$l_gray:rgb(226, 226, 226);
+$blue:rgb(196, 242, 252);
+
 
 
