--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -1,1 +1,37 @@
-.backColor
+#backColor
+  .upper
+  .lower
+
+#plofile
+  .top
+    .top__profile
+      Profile
+  .main
+    .main__textBlock
+      .main__textBlock--text
+        まず初めに、私のポートフォリオをご覧いただきありがとうございます。
+        %br このページは、プログラミングとはなんら関係のない自己紹介のためのページです。
+        わたしが好きなもの、得意なこと、その他いろいろ、
+        %br オカヤマカナタ という人間を、少しでも知っていただきたい。と思い作成いたしました。
+    .main__contentsBlock
+      .main__contentsBlock--upperBtn
+      .main__contentsBlock__boxes
+        .main__contentsBlock__boxes__leftBox
+        .main__contentsBlock__boxes__rightBox
+    .main__contentsBlock
+      .main__contentsBlock--upperBtn
+      .main__contentsBlock__boxes
+        .main__contentsBlock__boxes__leftBox
+        .main__contentsBlock__boxes__rightBox
+    .main__contentsBlock
+      .main__contentsBlock--upperBtn
+      .main__contentsBlock__boxes
+        .main__contentsBlock__boxes__leftBox
+        .main__contentsBlock__boxes__rightBox
+    .main__contentsBlock
+      .main__contentsBlock--upperBtn
+      .main__contentsBlock__boxes
+        .main__contentsBlock__boxes__leftBox
+        .main__contentsBlock__boxes__rightBox
+
+
