--- a/app/assets/stylesheets/modules/profiles/_index.scss
+++ b/app/assets/stylesheets/modules/profiles/_index.scss
@@ -1,7 +1,78 @@
-.backColor{
+#backColor{
   position: fixed;
+    z-index: -1;
     top: 0;
-  background-color: $blue;
-  height: 50vh;
-  width: 50vw;
+    left: 15vw;
+    width: 70vw;
+  .upper{
+    height: 45vh;
+  }
+  .lower{
+    background-color: $l_gray;
+    height: 55vh;
+  }
+}
+
+#plofile{
+  width: 80vw;
+  margin: 0 auto;
+
+// top================================================
+.top{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-color: #fff;
+  &__profile{
+    @include position-center;
+    font-size: 5vh;
+    color: $black;
+  }
+}
+// main================================================
+.main{
+  width: 100%;
+  &__textBlock{
+    padding-bottom: 30vh;
+    width: 100%;
+    background-color:white;
+    
+    &--text{
+    text-align: center;
+    line-height: 6vh;
+    font-size: 2vh;
+    }
+  }
+  &__contentsBlock{
+    height: 60vh;
+    width: 100%;
+    position: relative;
+    &--upperBtn{
+      position: absolute;
+        top: -1px;
+        left: 5.5%;
+      height: 5vh;
+      width: 5vh;
+      border-radius: 100%;
+      background-color: $l_gray;
+      }
+    &__boxes{
+      height: 100%;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      &__leftBox{
+        background-color: white;
+        width: 6.85%;
+        height: 100%;
+      }
+      &__rightBox{
+        background-color:white;
+        width: 92.5%;
+        height: 100%;
+      }
+    }
+  }
+}
+// ================================================
 }
