--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -1,7 +1,6 @@
 #backColor
   .upper
   .lower
-
 #plofile
   .top
     .top__profile
@@ -11,27 +10,31 @@
       .main__textBlock--text
         まず初めに、私のポートフォリオをご覧いただきありがとうございます。
         %br このページは、プログラミングとはなんら関係のない自己紹介のためのページです。
-        わたしが好きなもの、得意なこと、その他いろいろ、
+        わたしがどこで生まれ、育ち、何を経験してきたのか。
         %br オカヤマカナタ という人間を、少しでも知っていただきたい。と思い作成いたしました。
     .main__contentsBlock
       .main__contentsBlock--upperBtn
       .main__contentsBlock__boxes
         .main__contentsBlock__boxes__leftBox
+          1992年
         .main__contentsBlock__boxes__rightBox
+          かああああああああああああああああああ
     .main__contentsBlock
       .main__contentsBlock--upperBtn
       .main__contentsBlock__boxes
         .main__contentsBlock__boxes__leftBox
+          .main__contentsBlock__boxes__leftBox--text
+          .main__contentsBlock__boxes__leftBox--photo
         .main__contentsBlock__boxes__rightBox
-    .main__contentsBlock
-      .main__contentsBlock--upperBtn
-      .main__contentsBlock__boxes
-        .main__contentsBlock__boxes__leftBox
-        .main__contentsBlock__boxes__rightBox
-    .main__contentsBlock
-      .main__contentsBlock--upperBtn
-      .main__contentsBlock__boxes
-        .main__contentsBlock__boxes__leftBox
-        .main__contentsBlock__boxes__rightBox
+    -# .main__contentsBlock
+    -#   .main__contentsBlock--upperBtn
+    -#   .main__contentsBlock__boxes
+    -#     .main__contentsBlock__boxes__leftBox
+    -#     .main__contentsBlock__boxes__rightBox
+    -# .main__contentsBlock
+    -#   .main__contentsBlock--upperBtn
+    -#   .main__contentsBlock__boxes
+    -#     .main__contentsBlock__boxes__leftBox
+    -#     .main__contentsBlock__boxes__rightBox
 
 
