set/profile Box size

--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -13,28 +13,54 @@
         わたしがどこで生まれ、育ち、何を経験してきたのか。
         %br オカヤマカナタ という人間を、少しでも知っていただきたい。と思い作成いたしました。
     .main__contentsBlock
-      .main__contentsBlock--upperBtn
-      .main__contentsBlock__boxes
-        .main__contentsBlock__boxes__leftBox
+      .main__contentsBlock--btn
+      .main__contentsBlock__upper
+        .main__contentsBlock__upper--when
           1992年
-        .main__contentsBlock__boxes__rightBox
-          かああああああああああああああああああ
+        .main__contentsBlock__upper--what
+          大阪府大阪市西成区に生まれる。
+      .main__contentsBlock__lower
+        .main__contentsBlock__lower__left
+        .main__contentsBlock__lower__right
+          .main__contentsBlock__lower__right--text
+            小児ぜんそくを持って生まれ、こどもの頃は体が弱かったのですが
+            %br ディープな街西成で、元気に,平和に育ちました。
+            4つ上の姉の影響で、ヒーロー物には興味がなく、
+            %br バービー人形で遊んでいることが多かったそうです。恥ずかしい。
+          .main__contentsBlock__lower__right--photo
     .main__contentsBlock
-      .main__contentsBlock--upperBtn
-      .main__contentsBlock__boxes
-        .main__contentsBlock__boxes__leftBox
-          .main__contentsBlock__boxes__leftBox--text
-          .main__contentsBlock__boxes__leftBox--photo
-        .main__contentsBlock__boxes__rightBox
-    -# .main__contentsBlock
-    -#   .main__contentsBlock--upperBtn
-    -#   .main__contentsBlock__boxes
-    -#     .main__contentsBlock__boxes__leftBox
-    -#     .main__contentsBlock__boxes__rightBox
-    -# .main__contentsBlock
-    -#   .main__contentsBlock--upperBtn
-    -#   .main__contentsBlock__boxes
-    -#     .main__contentsBlock__boxes__leftBox
-    -#     .main__contentsBlock__boxes__rightBox
-
-
+      .main__contentsBlock--btn
+      .main__contentsBlock__upper
+        .main__contentsBlock__upper--when
+          1992年
+        .main__contentsBlock__upper--what
+          大阪府大阪市西成区に生まれる。
+      .main__contentsBlock__lower
+        .main__contentsBlock__lower__left
+        .main__contentsBlock__lower__right
+          .main__contentsBlock__lower__right--text
+            小児ぜんそくを持って生まれ、こどもの頃は体が弱かったのですが
+            %br ディープな街西成で、元気に,平和に育ちました。
+            aaaaaaaaaaaaaaaaaaaaaaaa
+            %br aaaaaaaaaaaaaaaaaaaaaaaa
+            aaaaaaaaaaaaaaaaaaaaaaaa
+            %br aaaaaaaaaaaaaaaaaaaaaaaa
+          .main__contentsBlock__lower__right--photo
+    .main__contentsBlock
+      .main__contentsBlock--btn
+      .main__contentsBlock__upper
+        .main__contentsBlock__upper--when
+          1992年
+        .main__contentsBlock__upper--what
+          大阪府大阪市西成区に生まれる。
+      .main__contentsBlock__lower
+        .main__contentsBlock__lower__left
+        .main__contentsBlock__lower__right
+          .main__contentsBlock__lower__right--text
+            小児ぜんそくを持って生まれ、こどもの頃は体が弱かったのですが
+            %br ディープな街西成で、元気に,平和に育ちました。
+            aaaaaaaaaaaaaaaaaaaaaaaa
+            %br aaaaaaaaaaaaaaaaaaaaaaaa
+            aaaaaaaaaaaaaaaaaaaaaaaa
+            %br aaaaaaaaaaaaaaaaaaaaaaaa
+          .main__contentsBlock__lower__right--photo
