--- a/app/assets/stylesheets/modules/profiles/_index.scss
+++ b/app/assets/stylesheets/modules/profiles/_index.scss
@@ -6,11 +6,11 @@
   width: 70vw;
   .upper{
     background-color: $blue;
-    height: 25vh;
+    height: 47vh;
   }
   .lower{
     background-color: $l_gray;
-    height: 75vh;
+    height: 53vh;
   }
 }
 
@@ -44,36 +44,68 @@
     }
   }
   &__contentsBlock{
-    height: 60vh;
     width: 100%;
     line-height: 4vh;
     font-size: 2vh;
+    // background-color: white;
     position: relative;
-    &--upperBtn{
+    &--btn{
       position: absolute;
-        top: -3px;
-        left: 5.5%;
-      height: 5vh;
-      width: 5vh;
+        left: 7.1vw;
+      height: 4vh;
+      width: 4vh;
       border-radius: 100%;
       background-color: $l_gray;
       }
-    &__boxes{
-      height: 100%;
+    &__upper{
+      height: 3.9vh;
+      width: 100%;
+      line-height: 3.9vh;
+      font-size: 2vh;
+      font-weight: bold;
+      display: flex;
+      justify-content: space-between;
+      background-color: white;
+      &--when{
+        padding-left: 3vh;
+        width: 10%;
+        height: 100%;
+      }
+      &--what{
+        padding-left: 3vh;
+        width: 89.5%;
+        height: 100%;
+      }
+    }
+    &__lower{
       width: 100%;
       display: flex;
       justify-content: space-between;
-      &__leftBox{
-        // background-color: rgb(253, 251, 150);
+      &__left{
         background-color: #fff;
-        width: 6.85%;
-        height: 100%;
+        width: 10%;
       }
-      &__rightBox{
+      &__right{
         // background-color:rgb(252, 209, 90);
         background-color: #fff;
-        width: 92.5%;
-        height: 100%;
+        min-height: 20vh;
+        width: 89.5%;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        &--text{
+          // background-color: red;
+          width: 50%;
+          line-height: 4vh;
+          font-size: 2vh;
+          padding: 2vh 0 10vh 5vh;
+        }
+        &--photo{
+          background-color: blue;
+          margin-right: 5vw;
+          width: 30%;
+          height: 100%;
+        }
       }
     }
   }
