--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -2,9 +2,11 @@
   .upper
   .lower
 #plofile
+  -# top================================================
   .top
     .top__profile
       Profile
+  -# main================================================
   .main
     .main__textBlock
       .main__textBlock--text
@@ -12,6 +14,7 @@
         %br このページは、プログラミングとはなんら関係のない自己紹介のためのページです。
         わたしがどこで生まれ、育ち、何を経験してきたのか。
         %br オカヤマカナタ という人間を、少しでも知っていただきたい。と思い作成いたしました。
+    -# contents1------------------------------------------------
     .main__contentsBlock
       .main__contentsBlock--btn
       .main__contentsBlock__upper
@@ -28,6 +31,7 @@
             4つ上の姉の影響で、ヒーロー物には興味がなく、
             %br バービー人形で遊んでいることが多かったそうです。恥ずかしい。
           .main__contentsBlock__lower__right--photo
+    -# contents2------------------------------------------------
     .main__contentsBlock
       .main__contentsBlock--btn
       .main__contentsBlock__upper
@@ -46,6 +50,7 @@
             aaaaaaaaaaaaaaaaaaaaaaaa
             %br aaaaaaaaaaaaaaaaaaaaaaaa
           .main__contentsBlock__lower__right--photo
+    -# contents3------------------------------------------------
     .main__contentsBlock
       .main__contentsBlock--btn
       .main__contentsBlock__upper
